fix(styles/type): wrap lines in code blocks

--- a/src/styles/_type.scss
+++ b/src/styles/_type.scss
@@ -89,6 +89,7 @@ $gutter: 0 !default;
 
     > code {
       font-size: 0.75em;
+      white-space: unset;
     }
   }
 }
